--- a/main.ipynb
+++ b/main.ipynb
@@ -1,5 +1,18 @@
 {
- "cells": [
+ "cells": [{
+metadata: {
+id: "57knM8jrYZ2t",
+colab_type: "text"
+},
+cell_type: "markdown",
+source: [
+" <td align="center"><a target="_blank" href="https://colab.research.google.com/github/nish17/prediction-of-cab-cancellation/master/main.ipynb"> ",
+" <img src="http://introtodeeplearning.com/images/colab/colab.png?v2.0" style="padding-bottom:5px;" />Run in Google Colab</a></td> ",
+" <td align="center"><a target="_blank" href="https://colab.research.google.com/github/nish17/prediction-of-cab-cancellation/master/main.ipynb"> ",
+" <img src="http://introtodeeplearning.com/images/colab/github.png" height="70px" style="padding-bottom:5px;" />View Source on GitHub</a></td> ",
+"</table> "
+]
+},
   {
    "cell_type": "code",
    "execution_count": 2,
