--- a/main.ipynb
+++ b/main.ipynb
@@ -6,6 +6,7 @@ colab_type: "text"
 },
 cell_type: "markdown",
 source: [
+"<table align="center"> ",
 " <td align="center"><a target="_blank" href="https://colab.research.google.com/github/nish17/prediction-of-cab-cancellation/master/main.ipynb"> ",
 " <img src="http://introtodeeplearning.com/images/colab/colab.png?v2.0" style="padding-bottom:5px;" />Run in Google Colab</a></td> ",
 " <td align="center"><a target="_blank" href="https://colab.research.google.com/github/nish17/prediction-of-cab-cancellation/master/main.ipynb"> ",
